testdata/golden/sema/invalid/ownership/own_requires_explicit_move.fmt
// Non-Copy types require explicit own move into own bindings.

fn main() {
    let s: string = "hi";
    let os: own string = s;
}
